# ironforge

./: .travis.yml  CMakeLists.txt  GenerateMain.cmake  LICENSE  README.md  SubdirList.cmake
ironforge/: CMakeLists.txt
ironforge/include/: config.h  config.h.in  ironforge.hpp  ironforge_common.hpp  ironforge_utility.hpp
ironforge/include/core/: application.hpp  assets.hpp  common.hpp  editor.hpp  errors.hpp  game.hpp  handle.hpp  input.hpp  journal.hpp  json.hpp  math.hpp  settings.hpp
ironforge/include/readers/: binary.hpp  readers.hpp  targa.hpp  text.hpp
ironforge/include/renderer/: phong_model.hpp  renderer.hpp
ironforge/include/scene/: entity.hpp  errors.hpp  instance.hpp  scene.hpp  volume.hpp
ironforge/include/ui/: command.hpp  context.hpp  imgui.hpp  imui.hpp  types.hpp  ui.hpp  widgets.hpp
ironforge/include/utility/: format.hpp  hash.hpp  thread_pool.hpp  types.hpp  utf.hpp
ironforge/include/video/: atlas.hpp  buffer.hpp  command.hpp  command_buffer.hpp  commands.hpp  debug.hpp  errors.hpp  framebuffer.hpp  framerate.hpp  glyphs.hpp  image_gen.hpp  instance.hpp  journal.hpp  pipeline.hpp  program.hpp  renderbuffer.hpp  sampler.hpp  screen.hpp  shader.hpp  sprite_batch.hpp  state.hpp  stats.hpp  texture.hpp  triangles_batch.hpp  types.hpp  vertex_array.hpp  vertices.hpp  vertices_gen.hpp  video.hpp
ironforge/src/core/: CMakeLists.txt  application.cpp  assets.cpp  editor.cpp  errors.cpp  game.cpp  game_detail.hpp  game_paths.cpp  input.cpp  instance.hpp  journal.cpp  math.cpp  settings.cpp  ui_styles.cpp
ironforge/src/readers/: CMakeLists.txt  binary.cpp  shader.cpp  targa.cpp  text.cpp
ironforge/src/renderer/: CMakeLists.txt  forward_renderer.cpp  forward_renderer.hpp  null_renderer.cpp  null_renderer.hpp  renderer.cpp
ironforge/src/scene/: CMakeLists.txt  camera.cpp  camera.hpp  emitter.hpp  entity.cpp  entity.hpp  input.cpp  input.hpp  instance.cpp  light.cpp  light.hpp  load.cpp  lua_bindings.cpp  lua_bindings.hpp  material.cpp  material.hpp  model.cpp  model.hpp  physics.cpp  physics.hpp  scene.cpp  script.cpp  script.hpp  simple_instance.hpp  sprite.cpp  sprite.hpp  timer.cpp  timer.hpp  transform.cpp  transform.hpp
ironforge/src/tools/: CMakeLists.txt  generate_main.cpp
ironforge/src/ui/: CMakeLists.txt  button.hpp  command.cpp  widget.hpp  widgets.cpp  window.hpp
ironforge/src/video/: CMakeLists.txt  atlas.cpp  buffer.cpp  command.cpp  command_buffer.cpp  commands.cpp  cube.hpp  debug.cpp  framebuffer.cpp  framerate.cpp  glyphs.cpp  image_gen.cpp  info.cpp  journal.hpp  pipeline.cpp  program.cpp  quad.hpp  renderbuffer.cpp  resources.cpp  sampler.cpp  shader.cpp  sprite_batch.cpp  state.cpp  stats.cpp  texture.cpp  texture_format.inl  triangles_batch.cpp  vertex_array.cpp  vertices_gen.cpp  video.cpp
lib/: CMakeLists.txt
lib/GL/include/GL/: ext_texture_filter_anisotropic.h
lib/GLcore/: CMakeLists.txt
lib/nativefiledialog/: CMakeLists.txt
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
testgame/: CMakeLists.txt
testgame/src/: config.hpp  main.cpp
worldeditor/: CMakeLists.txt
worldeditor/lib/imgui/: CMakeLists.txt  imgui_dock.cpp  imgui_dock.h  imgui_impl_sdl_gl3.cpp
worldeditor/src/: main.cpp
